# krunner-markdown-bookmarks

./: CLAUDE.md  CMakeLists.txt  README.md
.github/workflows/: build.yml  release.yml
src/: CMakeLists.txt
src/config/: markdownbookmarks_config.cpp  markdownbookmarks_config.h  markdownbookmarks_config.ui  utilities.h
src/core/: Bookmark.cpp  Bookmark.h  Config.h  FaviconCache.cpp  FaviconCache.h  FileReader.cpp  FileReader.h  FileWatcher.cpp  FileWatcher.h  SearchEngine.cpp  SearchEngine.h  SearchEngineReader.cpp  SearchEngineReader.h
src/runner/: markdownbookmarks.cpp  markdownbookmarks.h  markdownbookmarks.json
